--- a/static/css/indexcajacomentario.css
+++ b/static/css/indexcajacomentario.css
@@ -9,6 +9,7 @@ body {
     width: 100%;
     min-height: 100vh;
 }
+
 h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -107,7 +108,9 @@ h1 {
   align-items: center;
   color:#131e2e;
 }
-
+#menues{
+    border-radius: 40px;
+}
 .comentarios-header {
   margin-top: 20px;
   text-align: center;
