--- a/templates/index/panelnotificaciones.html
+++ b/templates/index/panelnotificaciones.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
   <link rel="stylesheet" href="/static/css/barralateral.css"/>
   <link rel="stylesheet" href="/static/css/ApartadoFuentes.css"/>
+  <link rel="stylesheet" href="/static/css/notificaciones.css"/>
   <meta name="csrf-token" content="{{ csrf_token() }}">
 </head>
 <body>
@@ -25,7 +26,6 @@
         <a class="separador3" href="/mis_likes"><img src="/static/utils/img/corazon4.png" alt="Likes" class="soporte3"></a>
         <a class="separador3" href="/configuracion"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
         <a class="separador3" href="/logout"><img src="/static/utils/img/cerrar-sesion.png" alt="cerrar-sesion" class="cerrar-sesion6"></a>
-        <a href="/logout">cerrar sesion</a> <!--provisorio-->
     </div>
     <!--Fin de la barra lateral-->
 
