--- a/static/css/notificaciones.css
+++ b/static/css/notificaciones.css
@@ -7,6 +7,19 @@
     border-radius: 20px;
     width: 40rem;
 }
+.notificacion-item.nueva{
+    margin-top: 1em;
+    background-color:#131e2e;
+    border-radius: 20px;
+    width: 40rem;
+}
+
+.usuario-nombre{
+    color: white;
+}
+.fecha{
+    color: white;
+}
 .btn-eliminar{
     margin-top: -0.5em;
 }
@@ -14,10 +27,16 @@
     .notificacion-item.leida{
         width: 30rem;
     }
+        .notificacion-item.nueva{
+        width: 30rem;
+    }
 
 }
 @media (max-width:600px ){
     .notificacion-item.leida{
+        width: 100%;
+    }
+            .notificacion-item.nueva{
         width: 100%;
     }
 
